# homework2

./: CMakeLists.txt  Hey Medni If you see this edit it!  Hey Medni If you see this edit it!.txt  code to write.xlsx  list_example_test.c  list_mtm.c
example_tests/: test1.err  test1.in  test1.out
